# rayon

./: LICENSE.txt  pyproject.toml
build_scripts/: get_target_list.sh  rayon_tool.sh
build_scripts/example/: 0_defs_to_source.sh  1_build_rayon.sh  2_builder_to_user.sh  3_test_rc.sh  4_configure_prod_on_stage.sh  5_test_prod.sh  README.rst  dev_config.sh  my_build.sh  prod_config.sh  removedirs.sh  stage_config.sh
docs/: Makefile  anaconda.rst  conf.py  configuration.rst  direct.rst  goals.rst  index.rst  installation.rst  modules.rst  monitoring.rst  rayon.rst  running.rst  test.rst  urls.rst
rayon/: __init__.py  __main__.py  common.py  config.py  config_file.py  filesystem.py  logging.py
rayon/etc/: redis.conf  supervisord.conf
rayon/etc/rc.d/: server
rayon/test/: README.txt
rayon/var/html/: index.html
